# OpenGL-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  Shader.h  main.cpp  util.cpp  util.h  utils.h
Linking/include/glad/: glad.h
Linking/lib/: glad.c
assets/models/barrel/: wooden_barrel.mtl
assets/models/bullet/: bullet.mtl
assets/models/pallet/: pallet.mtl
assets/models/tiles/floor_tile/: floor_tile.mtl
shaders/: frag.glsl  vert.glsl
src/: Camera.cpp  Camera.h  GPUTexturedMesh.h  GltfModelImporter.cpp  GltfModelImporter.h  ImageData.h  InputManager.h  MaterialStore.cpp  MaterialStore.h  MeshTypes.h  Model.h  ModelData.h  ModelGenerator.cpp  ModelGenerator.h  ModelImporter.cpp  ModelImporter.h  ModelObject.h  ModelStore.cpp  ModelStore.h  ObjModel.h  RenderEntity.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureStore.cpp  TextureStore.h  TexturedMeshData.h  main.cpp  stb.cpp  tiny_gltf.cc  util.cpp  util.h  utils.cpp  utils.h
src/imgui_windows/: ControlsWindow.h  QueueEditorWindow.h
